--- a/web/src/index.css
+++ b/web/src/index.css
@@ -4,6 +4,8 @@
 
 .leaflet-container {
   height: 100vh;
+  width: 100vw;
+  z-index: 0;
   margin: 0 auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
